[gd_scene load_steps=20 format=3 uid="uid://cbb60on63st1e"]

[ext_resource type="Script" path="res://Scripts/Neos/scrRingPowerSource.gd" id="1_s415x"]
[ext_resource type="Texture2D" uid="uid://bxbbj2s5lu78j" path="res://Graphics/Sprites/Particle Textures/muzzle_03.png" id="2_nxelt"]
[ext_resource type="AudioStream" uid="uid://54slhym3qqfg" path="res://Audio/Sounds/Neos/GexChargeSound.ogg" id="2_pb8sa"]

[sub_resource type="Gradient" id="Gradient_r5wcu"]
offsets = PackedFloat32Array(0.335052, 0.515464, 0.680412)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dowdp"]
gradient = SubResource("Gradient_r5wcu")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Animation" id="Animation_aakei"]
resource_name = "GradientAnimate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ring:texture:gradient:offsets")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.633333, 1),
"transitions": PackedFloat32Array(0.297302, 1, 2.2974, 1),
"update": 0,
"values": [PackedFloat32Array(0.335052, 0.515464, 0.680412), PackedFloat32Array(0.335052, 0.407216, 0.680412), PackedFloat32Array(0.335052, 0.57732, 0.680412), PackedFloat32Array(0.335052, 0.515464, 0.680412)]
}

[sub_resource type="Animation" id="Animation_fbba6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ring:texture:gradient:offsets")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedFloat32Array(0.335052, 0.515464, 0.680412)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c3x30"]
_data = {
"GradientAnimate": SubResource("Animation_aakei"),
"RESET": SubResource("Animation_fbba6")
}

[sub_resource type="Animation" id="Animation_l24vl"]
resource_name = "Expand"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ring:texture:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.353553, -2, 4.59479),
"update": 0,
"values": [64, 80, 64]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ring:texture:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.353553, -2, 4.59479),
"update": 0,
"values": [64, 80, 64]
}

[sub_resource type="Animation" id="Animation_c1i3u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ring:texture:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [64]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ring:texture:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [64]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7c2iu"]
_data = {
"Expand": SubResource("Animation_l24vl"),
"RESET": SubResource("Animation_c1i3u")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_eoy4a"]
radius = 35.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_44tf1"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_awuh2"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.489474, 0.252747), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_4po13"]
curve = SubResource("Curve_awuh2")

[sub_resource type="Curve" id="Curve_afj4r"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.736264), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_fnip3"]
curve = SubResource("Curve_afj4r")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8k540"]
particle_flag_disable_z = true
angle_min = 265.0
angle_max = 275.0
spread = 0.0
initial_velocity_min = 10.0
initial_velocity_max = 18.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.12
scale_curve = SubResource("CurveTexture_fnip3")
color = Color(0.478667, 1, 0.32, 1)
alpha_curve = SubResource("CurveTexture_4po13")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_23i51"]
particle_flag_disable_z = true
angle_min = 265.0
angle_max = 275.0
spread = 0.0
initial_velocity_min = 10.0
initial_velocity_max = 18.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.12
scale_curve = SubResource("CurveTexture_fnip3")
color = Color(0.478667, 1, 0.32, 1)
alpha_curve = SubResource("CurveTexture_4po13")

[node name="objRingPowerSource" type="Area2D" groups=["PowerSourceCentral"]]
collision_layer = 0
collision_mask = 4096
script = ExtResource("1_s415x")

[node name="Ring" type="Sprite2D" parent="."]
modulate = Color(0.461167, 1, 0.39, 1)
texture = SubResource("GradientTexture2D_dowdp")

[node name="RingGradientAnimate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c3x30")
}
autoplay = "GradientAnimate"

[node name="RingExpand" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7c2iu")
}
autoplay = "Expand"

[node name="ToggleVisibilityTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_eoy4a")

[node name="SourceLeft" type="Polygon2D" parent="."]
color = Color(0.207843, 0.152941, 0.286275, 1)
polygon = PackedVector2Array(-64, -8, -64, 8, -72, 16, -80, 0, -72, -16)

[node name="Node2D" type="Node2D" parent="SourceLeft"]
position = Vector2(-64, 0)

[node name="GPUParticles2D" type="GPUParticles2D" parent="SourceLeft/Node2D"]
material = SubResource("CanvasItemMaterial_44tf1")
position = Vector2(16, 0)
amount = 12
process_material = SubResource("ParticleProcessMaterial_8k540")
texture = ExtResource("2_nxelt")
local_coords = true

[node name="ColorRect" type="ColorRect" parent="SourceLeft/Node2D"]
offset_left = -2.0
offset_top = -8.0
offset_bottom = 8.0
color = Color(0.6, 1, 0.606667, 0.686275)

[node name="SourceRight" type="Polygon2D" parent="."]
color = Color(0.207843, 0.152941, 0.286275, 1)
polygon = PackedVector2Array(64, 8, 72, 16, 80, 0, 72, -16, 64, -8)

[node name="Node2D" type="Node2D" parent="SourceRight"]
position = Vector2(64, 0)
scale = Vector2(-1, 1)

[node name="GPUParticles2D" type="GPUParticles2D" parent="SourceRight/Node2D"]
material = SubResource("CanvasItemMaterial_44tf1")
position = Vector2(16, 0)
amount = 12
process_material = SubResource("ParticleProcessMaterial_23i51")
texture = ExtResource("2_nxelt")
local_coords = true

[node name="ColorRect" type="ColorRect" parent="SourceRight/Node2D"]
offset_left = -2.0
offset_top = -8.0
offset_bottom = 8.0
color = Color(0.6, 1, 0.606667, 0.686275)

[node name="MusicSource" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="ChargeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pb8sa")
bus = &"Sounds"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="ToggleVisibilityTimer" to="." method="_on_toggle_visibility_timer_timeout"]
